# discord_ipc_cpp

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: build.yml  cppcheck.yml  cpplint.yml
include/discord_ipc_cpp/: discord_ipc_client.hpp  ipc_types.hpp  json.hpp  parser.hpp  socket_client.hpp
scripts/: cppcheck.sh  cpplint.sh
src/: discord_ipc_client.cpp  internal_ipc_types.cpp  ipc_types.cpp  json.cpp  parser.cpp  socket_client.cpp  utils.cpp
src/include/: internal_ipc_types.hpp  parser.hpp  utils.hpp
